--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,7 @@
   "singleQuote": true,
   "trailingComma": "es5",
   "arrowParens": "always",
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "pluginSearchDirs": false
 }
